syntax = "proto3";

package rank;

option go_package = "proto;rank";

message rankRequest {
    string index = 1;
    string productName = 2;
    string rating = 3;
}

message rankResponse {
    string popularity = 1;
}

service rankService {
    rpc RankService(rankRequest) returns (rankResponse) {}
}